crates/orator-core/tests/snapshots/codegen_operations__array_response_header_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Array Header Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug)]
pub enum GetItemsResponse {
    /// OK
    Ok { body: Vec<String>, headers: GetItemsOkHeaders },
}
#[derive(Debug, Clone)]
pub struct GetItemsOkHeaders {
    pub x_ids: Vec<i64>,
    pub x_tags: Option<Vec<String>>,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    fn get_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<Output = Result<GetItemsResponse, Self::Error>> + Send;
}
