crates/orator-core/tests/snapshots/codegen_operations__default_response_headers_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Default Header Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug)]
pub enum GetItemsResponse {
    /// OK
    Ok(Vec<String>),
    /// Unexpected error
    Default {
        status: orator_axum::http::StatusCode,
        body: String,
        headers: GetItemsDefaultHeaders,
    },
}
#[derive(Debug, Clone)]
pub struct GetItemsDefaultHeaders {
    pub x_error_code: String,
}
#[derive(Debug)]
pub enum PingResponse {
    /// No content
    NoContent,
    /// Unexpected error
    Default { status: orator_axum::http::StatusCode, headers: PingDefaultHeaders },
}
#[derive(Debug, Clone)]
pub struct PingDefaultHeaders {
    pub x_error_code: String,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    fn get_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<Output = Result<GetItemsResponse, Self::Error>> + Send;
    fn ping(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<Output = Result<PingResponse, Self::Error>> + Send;
}
