crates/orator-core/tests/snapshots/codegen_operations__default_response_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// Default Response Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// List items with a default error response (with body)
#[derive(Debug)]
pub enum ListItemsResponse {
    /// A list of items
    Ok(Vec<super::types::Item>),
    /// unexpected error
    Default(orator_axum::http::StatusCode, super::types::Error),
}
/// Delete all items with a default response (no body)
#[derive(Debug)]
pub enum DeleteAllItemsResponse {
    /// Items deleted
    NoContent,
    /// unexpected error
    Default(orator_axum::http::StatusCode),
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    /// List items with a default error response (with body)
    fn list_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<
        Output = Result<ListItemsResponse, Self::Error>,
    > + Send;
    /// Delete all items with a default response (no body)
    fn delete_all_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<
        Output = Result<DeleteAllItemsResponse, Self::Error>,
    > + Send;
}
