crates/orator-core/tests/snapshots/codegen_operations__form_urlencoded_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// Form Urlencoded Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// Login with form credentials
#[derive(Debug)]
pub enum LoginResponse {
    /// Login successful
    Ok(super::types::Token),
    /// Invalid credentials
    Unauthorized,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    /// Login with form credentials
    fn login(
        &self,
        ctx: Self::RequestContext,
        body: super::types::LoginForm,
    ) -> impl std::future::Future<Output = Result<LoginResponse, Self::Error>> + Send;
}
