crates/orator-core/tests/snapshots/codegen_operations__mixed_content_types_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator v0.7.0
// Do not edit manually.
// Mixed Content Types Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// List items as JSON
#[derive(Debug)]
pub enum ListItemsResponse {
    /// A list of items
    Ok(Vec<super::types::Item>),
}
/// Create item via JSON
#[derive(Debug)]
pub enum CreateItemResponse {
    /// Created item
    Created(super::types::Item),
}
/// Export items as binary
#[derive(Debug)]
pub enum ExportItemsResponse {
    /// Binary export
    Ok(orator_axum::bytes::Bytes),
}
/// Upload items as a file
#[derive(Debug)]
pub enum ImportItemsResponse {
    /// Import result
    Ok(String),
}
#[derive(Debug)]
pub struct ImportItemsBody {
    pub file: Option<orator_axum::bytes::Bytes>,
}
/// Search with form data
#[derive(Debug)]
pub enum SearchItemsResponse {
    /// Search results
    Ok(Vec<super::types::Item>),
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    /// List items as JSON
    fn list_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<
        Output = Result<ListItemsResponse, Self::Error>,
    > + Send;
    /// Create item via JSON
    fn create_item(
        &self,
        ctx: Self::RequestContext,
        body: super::types::NewItem,
    ) -> impl std::future::Future<
        Output = Result<CreateItemResponse, Self::Error>,
    > + Send;
    /// Export items as binary
    fn export_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<
        Output = Result<ExportItemsResponse, Self::Error>,
    > + Send;
    /// Upload items as a file
    fn import_items(
        &self,
        ctx: Self::RequestContext,
        body: ImportItemsBody,
    ) -> impl std::future::Future<
        Output = Result<ImportItemsResponse, Self::Error>,
    > + Send;
    /// Search with form data
    fn search_items(
        &self,
        ctx: Self::RequestContext,
        body: super::types::SearchQuery,
    ) -> impl std::future::Future<
        Output = Result<SearchItemsResponse, Self::Error>,
    > + Send;
}
