crates/orator-core/tests/snapshots/codegen_operations__multipart_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator v0.7.0
// Do not edit manually.
// Multipart Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// Upload a document with metadata
#[derive(Debug)]
pub enum UploadDocumentResponse {
    /// Document uploaded
    Created(super::types::Document),
    /// Bad request
    BadRequest,
}
#[derive(Debug)]
pub struct UploadDocumentBody {
    pub description: Option<String>,
    pub file: Option<orator_axum::bytes::Bytes>,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    /// Upload a document with metadata
    fn upload_document(
        &self,
        ctx: Self::RequestContext,
        body: UploadDocumentBody,
    ) -> impl std::future::Future<
        Output = Result<UploadDocumentResponse, Self::Error>,
    > + Send;
}
