crates/orator-core/tests/snapshots/codegen_operations__octet_stream_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator v0.7.0
// Do not edit manually.
// Octet Stream Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// Download a binary file
#[derive(Debug)]
pub enum DownloadFileResponse {
    /// File content
    Ok(orator_axum::bytes::Bytes),
    /// Not found
    NotFound,
}
/// Upload a binary file
#[derive(Debug)]
pub enum UploadFileResponse {
    /// Upload successful
    Ok,
    /// Bad request
    BadRequest,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    /// Download a binary file
    fn download_file(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<
        Output = Result<DownloadFileResponse, Self::Error>,
    > + Send;
    /// Upload a binary file
    fn upload_file(
        &self,
        ctx: Self::RequestContext,
        body: orator_axum::bytes::Bytes,
    ) -> impl std::future::Future<
        Output = Result<UploadFileResponse, Self::Error>,
    > + Send;
}
