crates/orator-core/tests/snapshots/codegen_operations__optional_body_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Optional Body Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug)]
pub enum PatchBinaryResponse {
    /// ok
    Ok,
}
#[derive(Debug)]
pub enum PatchFormResponse {
    /// ok
    Ok,
}
#[derive(Debug)]
pub enum PatchJsonResponse {
    /// ok
    Ok,
}
#[derive(Debug)]
pub enum PatchTextResponse {
    /// ok
    Ok,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    fn patch_binary(
        &self,
        ctx: Self::RequestContext,
        body: Option<orator_axum::bytes::Bytes>,
    ) -> impl std::future::Future<
        Output = Result<PatchBinaryResponse, Self::Error>,
    > + Send;
    fn patch_form(
        &self,
        ctx: Self::RequestContext,
        body: Option<super::types::Payload>,
    ) -> impl std::future::Future<
        Output = Result<PatchFormResponse, Self::Error>,
    > + Send;
    fn patch_json(
        &self,
        ctx: Self::RequestContext,
        body: Option<super::types::Payload>,
    ) -> impl std::future::Future<
        Output = Result<PatchJsonResponse, Self::Error>,
    > + Send;
    fn patch_text(
        &self,
        ctx: Self::RequestContext,
        body: Option<String>,
    ) -> impl std::future::Future<
        Output = Result<PatchTextResponse, Self::Error>,
    > + Send;
}
