crates/orator-core/tests/snapshots/codegen_operations__response_headers_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Response Headers Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug)]
pub enum GetItemsResponse {
    /// A list of items
    Ok { body: Vec<String>, headers: GetItemsOkHeaders },
    /// Too many requests
    TooManyRequests { headers: GetItemsTooManyRequestsHeaders },
}
#[derive(Debug, Clone)]
pub struct GetItemsOkHeaders {
    pub x_rate_limit: i32,
    pub x_request_id: Option<String>,
}
#[derive(Debug, Clone)]
pub struct GetItemsTooManyRequestsHeaders {
    pub retry_after: i32,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    fn get_items(
        &self,
        ctx: Self::RequestContext,
    ) -> impl std::future::Future<Output = Result<GetItemsResponse, Self::Error>> + Send;
}
