crates/orator-core/tests/snapshots/codegen_operations__text_plain_operations.snap
---
source: crates/orator-core/tests/codegen_operations.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Text Plain Test | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// Echo text back
#[derive(Debug)]
pub enum EchoTextResponse {
    /// Echoed text
    Ok(String),
    /// Bad request
    BadRequest,
}
pub trait DefaultApi: Send + Sync + 'static {
    type Error: Send;
    type RequestContext: Send;
    /// Echo text back
    fn echo_text(
        &self,
        ctx: Self::RequestContext,
        body: String,
    ) -> impl std::future::Future<Output = Result<EchoTextResponse, Self::Error>> + Send;
}
